# OpenGL_Example

./: .editorconfig  .gitignore  CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  camera.cpp  coordinateSystem.cpp  light.cpp  shaderExample.cpp  texture2.cpp  textureExample.cpp  transformation.cpp  window.h  wtfExample.cpp
examples/light/: 1.colors.fs.glsl  1.colors.vs.glsl  1.lamp.fs.glsl  basic_lighting_specular.cpp
includes/glad/: glad.h
shader/: coordinateFragment.glsl  coordinateVertex.glsl  exampleVertex.vert  lampV.glsl  lightF.glsl  lightV.glsl  textureFragment1.glsl  textureVertex1.glsl
src/: CMakeLists.txt  camera.h  config.h  config.h.in  glad.c  shader_s.cpp  shader_s.h
